fixed problem with work experience not loading correctly on mobile

--- a/src/screens/Education/education.css
+++ b/src/screens/Education/education.css
@@ -45,15 +45,15 @@
     display: inline;
 
 }
-/* 
-@media only screen and (max-width: 900px){
+
+@media only screen and (max-width: 700px){
     .education__container{
         flex-direction: column;
     }
     .education__container img {
-        max-width: 100px;
+        max-width: 25%;
         object-fit: scale-down;
     }
-} */
+} 
 
 
